app/detective/static/detective/css/header.less
header {
    top:0;
    left:0;
    right:0;
    position:fixed;
    z-index:@zindex-header;
    padding:0;
    height:@header-height;
    background:@header-bg;
    border-bottom:1px solid #DDD;
    color:contract(@header-bg);

    .transition(@header-open-speed);
    .opacity(100);

    .is-home & {
        .opacity(0);
        .translate(0, -100px);
    }

    h1 {
        background: url("@{staticPath}img/favicon.ico") no-repeat left center;
        background-size:60px auto;
        padding-left:70px;
        margin:0 15px;
        font-size: 140%;
        height:@header-height;
        line-height:@header-height;

        a, a:hover, a:focus {
            color: #000;
            text-decoration:none;
        }

        i, em {
            font-style:normal;
            color:fade(#000, 60);
        }

        em {
            float:right;
            font-size:60%;
            font-style:italic;
        }
    }

    .user-state {
        height:@header-height;
        line-height:@header-height;
        font-size:90%;
    }

    .topic-search {
        border-left:#DDD solid 1px;
        position:absolute;
        top:0;
        bottom:0;
        padding-top:9px;
        padding-left:9px;
        left:250px;
        right:200px;

        .twitter-typeahead, .input-control {
            width:500px;
            height: @header-height - 19px;
            padding-top:0;
        }

        select.btn {
            float:left;
            height: @header-height - 17px;
            margin-right:9px;
            text-transform: capitalize;
            max-width:120px;
            text-align: left;
        }

        .form-control,  .tt-query {
            padding:2px 10px;
        }
    }

}

